# aoc-2025

./: .flake8  .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: python-ci.yml  readme-stars.yml  rust-ci.yml
src/: lib.rs
src/aoc_2025/: cli.py  day01.py  day03.py  day04.py  day06.py  day07.py  day08.py  day09.py  day1.py  processor.py
src/aoc_2025/days/: day02.py  day05.py  day07.py
src/days/: day1.rs
src/rust/: lib.rs
src/rust/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs
tests/: conftest.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day1.py
