[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py39"] }
pyo3-stub-gen = "0.10.0"

[dev-dependencies]
rstest = "0.25.0"

[features]
default = ["pyo3/extension-module"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

